# jina-grep

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  skill_registry.py  system_prompt_fs.md
data/: Grandmaster Pro Tip Winning First Place in Kaggle Competition with Feature Engineering Using cuDF pandas.md  XGBoost_Tips_and_Tricks.md
skills/: fs_search.md
