[project]
name = "jina-grep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-ollama>=1.1.0",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
